# embedded

./: .gitignore  LICENSE
Arduino-Giga-R1/DispShield_test/: platformio.ini
Arduino-Giga-R1/simple_test/: platformio.ini
BalanceSystem/AniPython-BalaCar/: platformio.ini
BalanceSystem/AniPython_BCar/: platformio.ini
LilyGo_projs/Tdisp-S3_FPStest/: platformio.ini
LilyGo_projs/Tdisp-S3_Oscilloscope/: CMakeLists.txt  platformio.ini  temp.txt
LilyGo_projs/Tdisp-S3_wifi/: Tdisp-S3_wifi.ino
Luckfox/Lyra_SIM868/: CMakeLists.txt  build.sh
Luckfox/Lyra_SIM868/include/: common_headers.h  gpio.h  serial.h  utils_defs.h
Luckfox/Lyra_SIM868/lib/: gpio.c  serial.c
Luckfox/Lyra_SIM868/src/: main.c  module.c  module.h  module_init.c
M5_projs/: platformio.ini
M5_projs/AtomS3_RollerBalaTriangle/: platformio.ini
M5_projs/Button/: Button.ino
M5_projs/CP1_WaveFormGenerator/: platformio.ini
M5_projs/CP2_DAC2_WaveGen/: platformio.ini
M5_projs/CP2_DDS/: platformio.ini
M5_projs/CP2_DDS_idf/: CMakeLists.txt  platformio.ini  sdkconfig.m5stick-c  sdkconfig.m5stick-c.bak  sdkconfig.m5stick-c.old  sdkconfig.old
M5_projs/CP2_Roller_I2C/: platformio.ini
M5_projs/CP2_WaveFormGenerator/: platformio.ini
M5_projs/GenericTemplete/: platformio.ini
M5_projs/JoyC/: JoyC.cpp  JoyC.ino
M5_projs/StickCP2_templete/: platformio.ini
M5_projs/Tab5_Term/: .gitattributes  .gitignore  AGENTS.md  HANDOFF.md  README.md  platformio.ini
STM32/: gfx_expboard_pinmap.xlsx  ~$gfx_expboard_pinmap.xlsx
STM32/Nucleo-F746ZG/ILI9486-8080_test/BSP/SSD1306/: CMakeLists.txt  ssd1306_conf.h  ssd1306_tests.c
STM32/Nucleo-F746ZG/ILI9486_test/BSP/ssd1306/: CMakeLists.txt  ssd1306_conf.h
Seeed_projs/arduino-wifiscan/: platformio.ini
Seeed_projs/duino-S3_wifi/: duino-S3_wifi.ino
Seeed_projs/potentiometer_test/: platformio.ini
Seeed_projs/xiao_samd21_dac/: platformio.ini
WaveShare_projs/EPD2in13_Wifi/: platformio.ini
WaveShare_projs/ESP32S3_SIM_module/: tmp
(+905 files in other folders)
